--- a/src/app/shared/pricing/pricing.component.html
+++ b/src/app/shared/pricing/pricing.component.html
@@ -3,17 +3,15 @@
   <div class="container">
     <div class="row justify-content-center text-center">
       <div class="col-lg-12">
-        <i class="ti-package title-icon text-muted"></i>
+        <img src="assets/images/cmc/logo-1.png"  style="max-width:10%;" alt="..." class="img-thumbnail">
         <h3 class="title">
-          Events - 
+          Events -
           <span class="fw-bold"> Save the Day! </span>
         </h3>
         <!-- <p class="text-muted mt-3 title-subtitle mx-auto">It is a long established fact that a reader will
                     be of a page when established fact looking at its layout.</p> -->
       </div>
     </div>
-
-    
 
     <div class="row mt-2" *ngFor="let event of events">
       <div class="col-lg-12">
@@ -22,73 +20,100 @@
           [ngClass]="{ active: event.isActive === true }"
         >
           <div class="plan-price fw-bold text-center">
-            <h1 class="mb-0 fw-bold">{{ event.title }}</h1>
+            <h1 class="mb-0 fw-bold">{{event.subject}}<span class="text-primary">{{ event.title }}</span></h1>
             <!-- <p class="mb-0">(on {{event.date}})</p> -->
           </div>
 
           <div class="container-fluid plan-features text-muted mt-5 mb-5">
-            <div class="row">
+
+
+            <div class="row mt-2" *ngFor="let event of events">
               <div class="col-md-6">
-                <h3 class="">Venue</h3>
-                <p *ngFor="let v of event.venue" class="mb-0">
-                  Venue 1:
+             <div class="card mb-2">
+              <div class="card-body">
+                <h5 class="card-title fw-bolder">Venue</h5>
+                <p
+                  class="card-text"
+                  *ngFor="let v of event.venue"
+                  class="mb-0"
+                >
                   <b class="text-primary"
                     >{{ v.title }}
                     <span *ngIf="v.date">on {{ v.date }}</span>
                   </b>
                   <span *ngIf="v.address">, {{ v.address }}</span>
-                  <span *ngIf="v.info"> - ({{ v.info }})</span>
+                  <span *ngIf="v.info"> - ({{ v.info }})</span>.
                 </p>
-                <!-- <p>Venue 2: <b class="text-primary">{{event.bandwidth}}</b></p> -->
               </div>
-              <div class="col-md-6">
-                <h3 class="">Date</h3>
-                <p>{{event.date}}</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <h3 class="">Highlights</h3>
-                <ul >
-                  <li *ngFor="let h of event.highlights">{{h}}</li>
-                </ul>
-                
-              </div>
-              <div class="col-md-6">
-                <h3 class="">Organizing Committee</h3>
-                <ul>
-                  <ul >
-                    <li *ngFor="let o of event.orgnisers">{{o}}</li>
-                  </ul>
-                </ul>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <h3 class="">Contact Information</h3>
-                <p class="mb-0">Email: {{event.email}}</p>
-                <p>Phone: {{event.phone}}</p>
-              </div>
-              <div class="col-md-6">
-                <h3 class="">Registration Fee</h3>
-                <p>$50.00</p>
-              </div>
-            </div>
-          </div>
+             </div>
 
-          <!-- <div class="plan-features text-muted mt-5 mb-5">
-                        <p>Bandwidth: </p>
-                        <p>Onlinespace: {{event.space}}</p>
-                        <p>Support: {{event.support}}</p>
-                        <p>{{event.domain}} Domain</p>
-                        <p class="mb-0">No Hidden Fees</p>
-                    </div> -->
-          <div>
-            <a href="#" class="btn btn-primary btn-round">Join Now</a>
+                <div class="card mb-2">
+                  <div class="card-body ">
+                    <h5 class="card-title fw-bolder">Highlights</h5>
+                    <p
+                      class="card-text mb-0 mx-2 text-capitalize"
+                      *ngFor="let o of event.highlights"
+                    >
+                    <span class="text-primary">* </span> {{ o }}
+                    </p>
+                  </div>
+                </div>
+
+                <div class="card mb-2">
+                  <div class="card-body">
+                    <h5 class="card-title fw-bolder">Contact Information</h5>
+                    <p class="mb-0">Email: {{ event.email }}</p>
+                    <p>Phone: {{ event.phone }}</p>
+                  </div>
+                </div>
+
+
+              </div>
+              <div class="col-md-6 text-right">
+                <div class="card mb-2">
+                  <div class="card-body">
+                    <h5 class="card-title fw-bolder">Date</h5>
+                    <p>{{ event.date }}</p>
+                  </div>
+                </div>
+
+                <div class="card mb-2">
+                  <div class="card-body">
+                    <h5 class="card-title fw-bolder">Organizing Committee - Department of Trauma Surgery
+                    </h5>
+                    <p
+                      class="card-text mb-0 mx-2 text-capitalize"
+                      *ngFor="let o of event.orgnisers"
+                    >
+                     <span class="text-primary">* </span>{{ o }}
+                    </p>
+                  </div>
+                </div>
+
+                <div class="card mb-2">
+                  <div class="card-body">
+                    <h5 class="card-title fw-bolder">Registration</h5>
+                 
+                       <p class="mb-0 font-italic mx-2"> Online (ISTAC Members only) - ₹500</p>
+                       <p class="mb-0 font-italic mx-2"> Symposium In-person  - ₹1000</p>
+                       <p class="mb-0 font-italic mx-2"> Workshop (Only)  - ₹3500</p>
+                       <p class="mb-0 font-italic mx-2"> Symposium & Workshop ₹4500 - (+18% GST)</p>
+                       <!-- <p class="mb-0"> Register at <a href="#">www.traumasurg.com</a></p> -->
+          
+                  </div>
+                </div>
+
+              </div>
+            </div>
+
+            <a href="#" class="btn btn-primary btn-round float-end">Register</a>
           </div>
         </div>
       </div>
     </div>
+
+ 
   </div>
 </section>
+
 <!-- END PRICING -->
