--- a/src/app/pages/index6/index6.component.html
+++ b/src/app/pages/index6/index6.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-custom sticky sticky-dark" id="navbar"
     (window:scroll)="windowScroll()">
     <div class="container">
-        <a class="navbar-brand" href="#">CMC Vellore</a>
+        <a class="navbar-brand" href="#">CMC, Vellore</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation" (click)="toggleMenu()">
             <span class="ti-menu"></span>
@@ -13,6 +13,11 @@
                 <li class="nav-item" [ngClass]="{'active':currentSection === 'home'}">
                     <a [ngxScrollTo]="'#home'" class="nav-link" href="javascript: void(0);">Home</a>
                 </li>
+
+                <li class="nav-item" [ngClass]="{'active':currentSection === 'pricing'}">
+                    <a [ngxScrollTo]="'#pricing'" class="nav-link" href="javascript: void(0);">Events</a>
+                </li>
+
                
                 <li class="nav-item" [ngClass]="{'active':currentSection === 'features'}">
                     <a [ngxScrollTo]="'#features'" class="nav-link" href="javascript: void(0);">Facility</a>
@@ -20,15 +25,16 @@
                 <!-- <li class="nav-item" [ngClass]="{'active':currentSection === 'testi'}">
                     <a [ngxScrollTo]="'#testi'" class="nav-link" href="javascript: void(0);">Client</a>
                 </li> -->
-                <li class="nav-item" [ngClass]="{'active':currentSection === 'team'}">
-                    <a [ngxScrollTo]="'#team'" class="nav-link" href="javascript: void(0);">Faculties</a>
-                </li>
+            
                 <li class="nav-item" [ngClass]="{'active':currentSection === 'faq'}">
                     <a [ngxScrollTo]="'#faq'" class="nav-link" href="javascript: void(0);">our Focus</a>
                 </li>
-                <li class="nav-item" [ngClass]="{'active':currentSection === 'pricing'}">
-                    <a [ngxScrollTo]="'#pricing'" class="nav-link" href="javascript: void(0);">Events</a>
+
+
+                <li class="nav-item" [ngClass]="{'active':currentSection === 'team'}">
+                    <a [ngxScrollTo]="'#team'" class="nav-link" href="javascript: void(0);">Faculties</a>
                 </li>
+              
 
                 <li class="nav-item" [ngClass]="{'active':currentSection === 'services'}">
                     <a [ngxScrollTo]="'#services'" class="nav-link" href="javascript: void(0);">About us</a>
@@ -60,7 +66,7 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-10">
                             <div class="text-center">
-                                <h1 class="text-white home-title mb-0">Christian Medical College Vellore</h1>
+                                <h1 class="text-white home-title mb-0">Christian Medical College, Vellore</h1>
                                 <p class="text-white home-subtitle-center home-subtitle mt-4 mb-0 mx-auto">The Christian Medical College, Vellore, seeks to be a witness to the healing ministry of Christ, through excellence in education, service and research.</p>
                                 <!-- <div class="text-center search-form mt-4">
                                     <form action="#">
@@ -77,13 +83,19 @@
     </section>
     <!-- END HOME -->
 
-    <app-features></app-features>
-    <!-- <app-client></app-client> -->
-    <app-team></app-team>
-    <app-faq></app-faq>
+  
     <app-pricing></app-pricing>
+    
+    
+    <!-- <app-client></app-client> -->
+
+
+    <app-features></app-features>
+    <app-faq></app-faq>
+    <app-team></app-team>
+   
     <app-services></app-services>
     <app-contact></app-contact>
     <app-footer></app-footer>
-    <app-switcher></app-switcher>
+    <!-- <app-switcher></app-switcher> -->
 </div>
