--- a/src/app/shared/features/features.component.html
+++ b/src/app/shared/features/features.component.html
@@ -1,5 +1,5 @@
 <!-- START FETURES -->
-<section class="section bg-light" id="features">
+<section class="section bg-honey"  id="features">
     <div class="container">
         <div class="row justify-content-center text-center">
             <div class="col-lg-12">
@@ -26,8 +26,8 @@
                         theatres, a radiology suite and 112 ward & ICU beds.
 
                     </p>
-                    <a href="#" class="btn btn-primary btn-round mt-3">Read more<i
-                            class="mdi mdi-chevron-right"></i></a>
+                    <!-- <a href="#" class="btn btn-primary btn-round mt-3">Read more<i
+                            class="mdi mdi-chevron-right"></i></a> -->
                 </div>
             </div>
         </div>
@@ -42,8 +42,8 @@
                         Department of trauma surgery commits itself to offer quality services towards Primary assessment
                         and surgical interventions for the Injured Victim in a comprehensive manner. The subsequent
                         review and follow-up as Outpatient services.</p>
-                    <a href="#" class="btn btn-primary btn-round mt-3">Read more<i
-                            class="mdi mdi-chevron-right"></i></a>
+                    <!-- <a href="#" class="btn btn-primary btn-round mt-3">Read more<i
+                            class="mdi mdi-chevron-right"></i></a> -->
                 </div>
             </div>
             <div class="col-lg-6 offset-lg-1 mt-2">
