--- a/src/app/shared/team/team.component.html
+++ b/src/app/shared/team/team.component.html
@@ -17,7 +17,7 @@
             <div >
               <img
               style="max-width:40%;"
-                [src]="item.image ? 'assets/images/doctor/'+item.image : 'assets/images/doctor/pro-logo.png'"
+                [src]="item.image ? 'assets/images/doctors/'+item.image : 'assets/images/doctor/pro-logo.png'"
                 alt=""
                 class="img-fluid rounded-circle img-thumbnail mx-auto d-block"
               />
