designed by added

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="mt-4 pt-2 text-center">
                     <p class="copy-rights text-muted mb-0">
-                       {{year}} © CMC VELLORE.
+                       {{year}} © CMC VELLORE.   <span class="text-white">Design by UDHAYAM INFOTECH</span>
                     </p>
                 </div>
             </div>
