--- a/src/app/shared/pricing/pricing.component.html
+++ b/src/app/shared/pricing/pricing.component.html
@@ -199,10 +199,11 @@
             </div>
 
             <div class="team-name">
-              <p class="fw-bold mb-0 mt-4"><span *ngIf="item.prof ">{{ item.prof }}, </span>  {{item.at}}</p>
-              <p class="text-muted mt-4">
+              <p class="fw-bold mb-0 mt-4">  {{item.name}}</p>
+              <p class=" mb-0 mt-4"><span *ngIf="item.prof ">{{ item.prof }}, </span>  {{item.at}}</p>
+              <!-- <p class="text-muted mt-4">
                 {{ item.dept }}
-              </p>
+              </p> -->
             </div>
             <!-- <div class="">
                     <ul class="list-inline team-social mt-4 mb-0">
