--- a/src/app/shared/pricing/pricing.component.html
+++ b/src/app/shared/pricing/pricing.component.html
@@ -171,7 +171,7 @@
       </div>
     </div>
   </div>
-
+<br>
   <div class="container">
     <!-- <div class="row justify-content-center text-center">
     <div class="col-lg-12">
@@ -182,6 +182,15 @@
   </div> -->
 
     <div class="row">
+
+      <div class="row justify-content-center text-center">
+        <div class="col-lg-12">
+          <!-- <i class="ti-user title-icon text-muted"></i> -->
+          <h3 class="title text-primary">meet Our <span class="fw-bold">Faculties</span></h3>
+        
+        </div>
+      </div> 
+
       <ng-container *ngFor="let item of doctors; let i = index">
         <div class="col-lg-4">
           <div class="text-center bg-white team-box mt-3 p-5">
