--- a/src/app/pages/candidate-details/candidate-details.component.html
+++ b/src/app/pages/candidate-details/candidate-details.component.html
@@ -27,6 +27,7 @@
         <p class="card-text"><strong>Participant Type:</strong> {{ rowData.participanttype || "-NA-"}}</p>
         <p class="card-text"><strong>Practice Type:</strong> {{ rowData.practicetype || "-NA-"}}</p>
         <p class="card-text"><strong>Accompany Members:</strong> {{ rowData.accompanymembers || "-NA-"}}</p>
+        <p class="card-text"><strong>External or CMC Staff: </strong>: {{ rowData.inputvalue5 || "-NA-"}}</p>
         <p class="card-text"><strong>Payment Amount:</strong> {{ rowData.paymentamount || "-NA-"}}</p>
         <p class="card-text"><strong>Has GST:</strong> {{ rowData.hasgst || "-NA-"}}</p>
         <p class="card-text"><strong>GST Number:</strong> {{ rowData.gstnumber || "-NA-"}}</p>
