--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -520,6 +520,28 @@
               />
             </div> -->
 
+
+  
+
+            <div class="form-group mb-3">
+              <label class="text-primary" for="inputvalue5">External or CMC Staff:</label>
+              <select class="form-control" id="inputvalue5" formControlName="inputvalue5" (change)="calculateTotalPrice()">
+                <option value="External">External</option>
+                <option value="CMCStaff">CMC Staff</option>
+              </select>
+
+              <small
+              class="form-text text-muted"
+              *ngIf="
+                registrationForm.get('inputvalue5').hasError('required')
+              "
+              class="error-message"
+              >This field is required.</small
+            >
+            </div>
+
+
+
             <div class="form-group mb-3">
               <label for="registrationType">Registration Type:</label>
               <select
@@ -528,18 +550,18 @@
                 formControlName="registrationType"
                 (change)="calculateTotalPrice()"
               >
-              <option value="NA">NA</option>
+              <!-- <option value="NA">NA</option> -->
                 <option
                   *ngIf="registrationForm.get('istacMember').value === 'Yes'"
                   value="Online"
                 >
-                  Online ₹ 500 + 18% GST
+                  Online ₹ 500 <span *ngIf="registrationForm.get('inputvalue5').value === 'External'">+ 18% GST</span>
                 </option>
                
-                <option value="Symposium">Symposium ₹ 1000 + 18% GST</option>
-                <option value="Workshop">Workshop ₹ 3500 + 18% GST</option>
+                <option value="Symposium">Symposium ₹ 1000 <span *ngIf="registrationForm.get('inputvalue5').value === 'External'">+ 18% GST</span></option>
+                <option value="Workshop">Workshop ₹ 3500 <span *ngIf="registrationForm.get('inputvalue5').value === 'External'">+ 18% GST</span></option>
                 <option value="SymposiumAndWorkshop">
-                  Symposium & Workshop ₹ 4500 + 18% GST
+                  Symposium & Workshop ₹ 4500 <span *ngIf="registrationForm.get('inputvalue5').value === 'External'">+ 18% GST</span>
                 </option>
               </select>
             </div>
@@ -837,14 +859,14 @@
             </div>
 
             <div class="mb-3">
-              <p>Total Price Including GST: ₹ {{ totalPrice }}</p>
+              <p>Total Price : ₹ {{ totalPrice }}</p>
             </div>
 
             <div class="alert alert-danger mb-2" *ngIf="getInvalidFields().length > 0">
               Please correct the following fields:
               <ul>
                 <li *ngFor="let field of getInvalidFields()">
-                  {{ field }}
+                  {{ field == 'inputvalue5' ? 'External or CMC Staff:' : field }}
                 </li>
               </ul>
             </div>
