--- a/src/app/shared/team/team.component.html
+++ b/src/app/shared/team/team.component.html
@@ -16,7 +16,7 @@
           <div class="card border-dark text-center bg-white team-box mt-3 p-5">
             <div >
               <img
-              style="max-width:40%;"
+              style="width:90px;height: 90px;"
                 [src]="item.image ? 'assets/images/doctors/'+item.image : 'assets/images/doctor/pro-logo.png'"
                 alt=""
                 class="img-fluid rounded-circle img-thumbnail mx-auto d-block"
