--- a/src/app/pages/candidate-details/candidate-details.component.html
+++ b/src/app/pages/candidate-details/candidate-details.component.html
@@ -20,8 +20,7 @@
         <p class="card-text"><strong>Name in Receipt:</strong> {{ rowData.nameinreceipt || "-NA-"}}</p>
         <p class="card-text"><strong>Address 1:</strong> {{ rowData.address1 || "-NA-"}}</p>
         <p class="card-text"><strong>Address 2:</strong> {{ rowData.address2 || "-NA-"}}</p>
-        <p class="card-text"><strong>City:</strong> {{ rowData.city || "-NA-"}}</p>
-        <p class="card-text"><strong>State:</strong> {{ rowData.state || "-NA-"}}</p>
+     
         <p class="card-text"><strong>Country:</strong> {{ rowData.country || "-NA-"}}</p>
         <p class="card-text"><strong>Pincode:</strong> {{ rowData.pincode || "-NA-"}}</p>
         <p class="card-text"><strong>Phone:</strong> {{ rowData.phone || "-NA-"}}</p>
@@ -43,6 +42,9 @@
         <p class="card-text"><strong>GST Registration:</strong> {{ rowData.gstreg || "-NA-"}}</p>
         <!-- Add any additional fields as needed -->
 
+
+        <p class="card-text"><strong>CMC MISSION:</strong> {{ rowData.city || "-NA-"}}</p>
+        <p class="card-text"><strong>MISSION ID:</strong> {{ rowData.state || "-NA-"}}</p>
 
         <p class="card-text"><strong>designation: </strong>: {{ rowData.inputvalue1 || "-NA-"}}</p>
         <p class="card-text"><strong>placeOfWork: </strong>: {{ rowData.inputcaption2 || "-NA-"}}</p>
